--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@react-three/rapier": "^2.1.0",
     "@tailwindcss/vite": "^4.1.8",
     "@types/react-router-dom": "^5.3.3",
+    "framer-motion": "^12.16.0",
     "gltfjsx": "^6.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
