--- a/backend/apiGateWay/package.json
+++ b/backend/apiGateWay/package.json
@@ -10,12 +10,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "amqplib": "^0.10.8",
     "axios": "^1.9.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
+    "http-proxy-middleware": "^3.0.5",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "mysql2": "^3.14.1",
     "nodemon": "^3.1.10",
     "sequelize": "^6.37.7"
