--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "@react-three/rapier": "^2.1.0",
     "@tailwindcss/vite": "^4.1.8",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.9.0",
     "framer-motion": "^12.16.0",
     "gltfjsx": "^6.5.3",
+    "lucide-react": "^0.514.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
