--- a/backend/userService/package.json
+++ b/backend/userService/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
     "nodemon": "^3.1.10",
+    "redis": "^5.5.6",
     "sequelize": "^6.37.7"
   }
 }
